--- a/src/components/CardList/index.css
+++ b/src/components/CardList/index.css
@@ -15,3 +15,10 @@
   text-align: center;
   margin-top: 2rem;
 }
+
+@media (max-width: 900px) {
+  .card-list {
+    padding-left: 0;
+    margin-top: 1rem;
+  }
+}
